# carbon

./: .dockerignore  .eslintignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-comopse.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
axum/: .dockerignore  Cargo.toml  Dockerfile
axum/src/: error.rs  main.rs
client/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/src/: AppRoute.tsx  hooks.tsx
client/src/components/: EditItem.tsx  Icons.tsx  ItemList.tsx  NotFound.tsx  ViewItem.tsx
client/src/contexts/: ItemListContext.tsx  ItremContext.tsx
client/src/lib/: types.ts  utils.ts
client/src/routes/: index.tsx  root.tsx
server/: .gitignore  Cargo.toml
server/src/: error.rs  main.rs
src/: AppRoute.tsx  ItemListContext.tsx  ItremContext.tsx  app.css  app.html  error.rs  hooks.tsx  index.css  index.tsx  main.rs  main.tsx  types.ts  utils.ts
src/components/: EditItem.tsx  Icons.tsx  ItemList.tsx  ViewItem.tsx
src/contexts/: ItemListContext.tsx  ItremContext.tsx
src/lib/: DialogToDelete.svelte  Edit.svelte  Header.svelte  ItemComponent.svelte  Items.svelte  Top.svelte  View.svelte  env.ts  git.ts  gitserver.ts  stores.ts  toItem.ts  types.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  index.tsx  pageError.tsx  root.tsx
src/routes/item/: +page.server.ts  +page.svelte
src/routes/pageItem/: hooks.tsx  index.tsx
src/routes/pageWrapper/: index.tsx
src/routes/search/: +layout.svelte  +page.server.ts  +page.svelte  hooks.tsx  index.tsx
(+9 files in other folders)
