[package]
name = "marks"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
serde_json = "1.0.99"
tracing-subscriber = "0.3"
tracing = "0.1.37"
git2 = { version = "0.17.2", default-features = false }
